--- a/style.css
+++ b/style.css
@@ -31,6 +31,36 @@ html {
     scroll-padding-top: 4rem;
 }
 
+section {
+    padding: 3rem 9%;
+}
+
+.btn {
+    display: inline-block;
+    padding: .7rem 3rem;
+    margin-top: 1rem;
+    border-radius: 5rem;
+    background: var(--gradient);
+    color: #fff;
+    cursor: pointer;
+    font-size: 1.7rem;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
+.heading {
+    text-align: center;
+    color: transparent;
+    background: var(--gradient);
+    -webkit-background-clip: text;
+    background-clip: text;
+    font-size: 5rem;
+    text-transform: uppercase;
+    padding: 1rem;
+}
+
 header {
     position: fixed;
     top: 0;
@@ -68,20 +98,89 @@ header .navbar a:hover {
     display: none;
 }
 
+.home {
+    background: url(images/home-bg.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh;
+    text-align: center;
+}
 
+.home .content {
+    padding-top: 5rem;
+    max-width: 70rem;
+    margin: 0 auto;
+}
 
+.home .content h3 {
+    font-size: 6.5rem;
+    color: #fff;
+}
 
+.home .content p {
+    font-size: 1.7rem;
+    color: #eee;
+    padding: 1rem 0;
+}
 
+.home .swiper-container {
+    width: 100%;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
 
+.home .swiper-slide {
+    width: 30rem;
+    height: 50rem;
+}
 
+.home .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
 
+.features .box-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
+.features .box-container .box {
+    margin: 1rem;
+    border-radius: .5rem;
+    text-align: center;
+    background: rgba(237, 23, 111, .05);
+    padding: 1rem;
+    flex: 1 1 30rem;
+    cursor: pointer;
+}
 
+.features .box-container .box i {
+    color: var(--red);
+    font-size: 5rem;
+    padding: 1rem;
+}
 
+.features .box-container .box h3 {
+    color: var(--black);
+    font-size: 2.4rem;
+}
 
+.featurs .box-container .box p {
+    color: #666;
+    font-size: 1.5rem;
+    padding: 1rem;
+}
 
+.features .box-container .box:hover {
+    background: var(--gradient);
+}
 
-
+.features .box-container .box:hover>* {
+    color: #fff;
+}
 
 
 
@@ -106,6 +205,10 @@ header .navbar a:hover {
 
     header {
         padding: 2rem 4%;
+    }
+
+    section {
+        padding: 3rem 4%;
     }
 }
 
@@ -145,10 +248,22 @@ header .navbar a:hover {
     .fa-times {
         transform: rotate(180deg);
     }
+
+    .home .content h3 {
+        font-size: 4rem;
+    }
+
+    .home .content p {
+        font-size: 1.5rem;
+    }
 }
 
 @media(max-width: 400px) {
     html {
         font-size: 50%;
+    }
+
+    .heading {
+        font-size: 4rem;
     }
 }
