--- a/style.css
+++ b/style.css
@@ -302,19 +302,139 @@ header .navbar a:hover {
     color: var(--red);
 }
 
+.pricing .box-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.pricing .box-container .box {
+    flex: 1 1 33rem;
+    text-align: center;
+    margin: 1rem;
+    padding: 2rem 0;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1);
+    border: .1rem solid rgba(0, 0, 0, 0.3);
+}
+
+.pricing .box-container .box .price {
+    font-size: 5rem;
+    color: var(--black);
+    font-weight: bolder;
+}
+
+.pricing .box-container .box .price span {
+    font-size: 2rem;
+    font-weight: normal;
+}
+
+.pricing .box-container .box h3 {
+    color: #fff;
+    background: var(--gradient);
+    font-size: 3rem;
+    padding: 1.5rem 0;
+    margin: 1rem 0;
+}
+
+.pricing .box-container .box ul {
+    list-style: none;
+    padding: 2rem 0;
+    border-bottom: .1rem solid var(--red);
+}
+
+.pricing .box-container .box ul li {
+    padding: .7rem 0;
+    font-size: 1, 7rem;
+    color: #666;
+}
+
+.pricing .box-container .box .btn {
+    margin-top: 2rem;
+}
+
+.contact {
+    background: linear-gradient(#fff 50%, var(--black) 50.1%);
+}
 
 
+.contact form {
+    padding: 2rem;
+    background: #fff;
+    box-shadow: 0 .5rem 3rem rgba(0, 0, 0, 0.1)
+}
 
+.contact form .inputBox {
+    position: relative;
+}
 
+.contact form .inputBox input,
+.contact form .inputBox textarea {
+    width: 100%;
+    margin: 1.5rem 0;
+    padding: 1rem 0;
+    border-bottom: .2rem solid rgba(0, 0, 0, 0.3);
+    font-size: 1.7rem;
+    text-transform: none;
+}
 
+.contact form .inputBox textarea {
+    resize: none;
+    height: 15rem;
+}
 
+.contact form .inputBox input:focus,
+.contact form .inputBox textarea:focus {
+    border-color: var(--red);
+}
 
+.contact form .inputBox label {
+    font-size: 1.7rem;
+    position: absolute;
+    top: 2.3rem;
+    left: 0;
+}
 
+.contact form .inputBox input:focus~label,
+.contact form .inputBox textarea:focus~label,
+.contact form .inputBox input:valid~label,
+.contact form .inputBox textarea:valid~label {
+    top: -.4rem;
+    font-size: 1.5rem;
+    color: var(--red);
+}
 
+.footer {
+    text-align: center;
+    background: var(--black);
+}
 
+.footer .share a {
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    background: #eee;
+    color: var(--black);
+    border-radius: 50%;
+    font-size: 2rem;
+    margin: .3rem;
+}
 
+.footer.share a:hover {
+    color: #fff;
+    background: var(--gradient);
+}
 
+.footer .credit {
+    color: #eee;
+    padding: 2.5rem 1rem;
+    font-weight: normal;
+    font-size: 2rem;
+}
 
+.footer .credit span {
+    color: var(--red);
+}
 
 
 
